hphp/hack/test/typecheck/variadics/ellipsis_strict_mode.php.like_types.exp
File "ellipsis_strict_mode.php", line 6, characters 10-22:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "ellipsis_strict_mode.php", line 17, characters 5-48:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "ellipsis_strict_mode.php", line 24, characters 7-20:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "ellipsis_strict_mode.php", line 28, characters 7-30:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "ellipsis_strict_mode.php", line 31, characters 19-20:
Was expecting a type hint (what about: varray) (Typing[4033])
